# althack

./: .gitmodules  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.rst  pyproject.toml
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/source/: index.rst
include/althack/: althack.hpp  backend.hpp  config.hpp.in  configuration.hpp  crypto_service.hpp  database.hpp  frontend.hpp  main_window.hpp
include/althack/backends/: server_backend.hpp
include/althack/databases/: soci_database.hpp
include/althack/visuals/: account_node.hpp  node.hpp
include/dungeon_miner/: config.hpp.in  configuration.hpp  dungeon_miner.hpp
src/: main.cpp
src/althack/: althack.cpp  backend.cpp  crypto_service.cpp  database.cpp  frontend.cpp  main_window.cpp
src/althack/backends/: server_backend.cpp
src/althack/databases/: soci_database.cpp
src/althack/visuals/: account_node.cpp  node.cpp
src/dungeon_miner/: dungeon_miner.cpp
